--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body background = "background.jpg">
   <center>
-    <h1 class = "btn btn-info heading">Object Detection</h1>
+    <marquee><h1 class = "btn btn-info heading">Object Detection</h1> </marquee>
 
     <h3 id="status" class="btn btn-danger"></h3>
 
